# OOP

lab1/: CMakeLists.txt  lab1.cpp  lab1.hpp  labTest.cpp  main
lab2/: CMakeLists.txt  Five.cpp  Five.hpp  test_Five.cpp
lab3/: CMakeLists.txt  main.cpp  test.cpp
lab3/heads/: figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp
lab3/src/: hexagon.cpp  octagon.cpp  pentagon.cpp
lab4/: CMakeLists.txt  figures_test_float.cpp  figures_test_int.cpp  figures_tests.cpp  main.cpp  mini  mini.cpp  test.cpp
lab4/build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  PolygonTest  PolygonTestFloat  PolygonTestInt  cmake_install.cmake  main
lab4/heads/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp  point.hpp
lab4/src/: hexagon.cpp  hexagon.ipp  octagon.cpp  octagon.ipp  pentagon.ipp
lab5/: CMakeLists.txt  test.cpp
lab5/src/: array.hpp  custom_memory_resourse.hpp
lab6/: CMakeLists.txt  main.cpp  test.cpp
lab6/src/include/: BattleVisitor.h  FileManager.h  NPCFactory.h
lab6/src/npcs/: Bear.h  Elf.h  Rogue.h
lab7/: main.cpp  test.cpp
lab7/src/include/: BattleVisitor.h
lab7/src/npcs/: Bear.h  Elf.h  NPC.h  Rogue.h
lab7/src/rungame/: rungame.h
